# music-controller

./: .gitignore  README.md  pyproject.toml
music_controller/api/: models.py  views.py
music_controller/api/migrations/: 0001_initial.py
music_controller/frontend/: package-lock.json
music_controller/frontend/src/components/: App.js
music_controller/music_controller/: settings.py  urls.py
