[tool.poetry]
name = "django-music-controller"
version = "0.1.0"
description = "Django Music Controller Api"
authors = ["Diego Leal <diego.leal@shipwell.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
